# bark_detector

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  bark_detector.log.bak  bd.py  config-example.json  config.json  debug_actual_plot.py  debug_event_structure.py  debug_intensity_visualization.py  debug_violation_detection.py  debug_violation_markers.py  debug_violation_test.py  install.py  main.py  prd.md  pyproject.toml  requirements-apple-silicon.txt  requirements-fallback.txt  requirements-intel.txt  requirements.txt  sync.sh  test_graph_generation.py  test_intensity_logic.py  test_mock_debug.py
.claude/: settings.local.json
.claude/agents/: phil.md
.claude/commands/: next.md  plan.md
.windsurf/workflows/: phil.md
bark_detector/: __init__.py  __main__.py  cli.py
bark_detector/calibration/: __init__.py  file_calibration.py  profiles.py  realtime_calibration.py
bark_detector/core/: __init__.py  detector.py  models.py
bark_detector/legal/: __init__.py  database.py  models.py  tracker.py
bark_detector/recording/: parser.py  (+4 more)
docs/: architecture.md  architecture_overview.md  backlog.md  bugs.md  configuration.md  decisions.md  features.md  improvements.md  prd.md  project_overview.md  project_status.md  sample_based_testing.md  tasks.md  tests.md  violation_rules.md
scripts/: README.md  convert_ground_truth_format.py  migrate_logs_by_date.py  organize_recordings.py  rename_recordings_to_start_timestamps.py  rollback_recording_renames.py  tree.py
tests/: __init__.py  conftest.py  pytest.ini  test_logging_channels.py  test_migration_script.py
(+132 files in other folders)
