[project]
name = "bark-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.9.0",
    "numpy>=1.20.0",
    "pyaudio>=0.2.11",
    "scipy>=1.8.0",
    "tensorflow>=2.8.0",
    "tensorflow-hub>=0.12.0",
]
