[project]
name = "bark-detector"
version = "0.1.0"
description = "YAMNet-based bark detection system"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "librosa>=0.9.0,<0.11.0",
    "numpy>=1.20.0,<1.25.0",
    "pyaudio>=0.2.11",
    "scipy>=1.8.0,<1.12.0",
    "soundfile>=0.10.0",
    "tensorflow-hub==0.13.0",
    "tensorflow-macos==2.12.0",
]
